k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: project-draft
spec:
  type: LoadBalancer
  selector:
    app: project-draft
  ports:
    - port: 3000
