k8s/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-draft-db
  labels:
    app: project-draft-db
spec:
  selector:
    matchLabels:
      app: project-draft-db
  replicas: 1
  template:
    metadata:
      labels:
        app: project-draft-db
    spec:
      containers:
        - image: mysql:8.0
          name: project-draft-db
          ports:
            - containerPort: 3000
            - containerPort: 3306
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: project-draft-db
spec:
  selector:
    app: project-draft-db
  ports:
    - port: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-draft
  labels:
    app: project-draft
spec:
  selector:
    matchLabels:
      app: project-draft
  replicas: 1
  template:
    metadata:
      labels:
        app: project-draft
    spec:
      containers:
        - name: project-draft
          image: project-draft:release-1   # must match the image:tag you built & kind-loaded
          imagePullPolicy: Never
          command: ["./script/run"]
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: project-draft
spec:
  type: LoadBalancer
  selector:
    app: project-draft
  ports:
    - port: 3000

# Ingress
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-draft-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend at root
          - pathType: Prefix
            path: /
            backend:
              service:
                name: project-draft
                port:
                  number: 3000
          # Backend at /api...
          - pathType: ImplementationSpecific
            path: /api(/|$)(.*)
            backend:
              service:
                name: backend
                port:
                  number: 8000
